tests/machine/x/cpp/typed_let.mochi.error
line 13: ../../../tests/machine/x/cpp/typed_let.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/typed_let.mochi.cpp:13:5: error: declaration of ‘auto y’ has no initializer
   13 |     auto y;
      |     ^~~~

 12 | int main() {
 13 |     auto y;
 14 |     print(y);
